--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,15 +1,48 @@
 version: '3.1'
 services:
   stats-server:
+    build: stats/stats-server
+    image: explore-with-me-stats-server
+    container_name: ewm-stats-server
     ports:
       - "9090:9090"
+    depends_on:
+      - stats-db
+    environment:
+      - SPRING_DATASOURCE_URL=jdbc:postgresql://stats-db:5432/ewm-stats-db
+      - POSTGRES_USER=postgres
+      - POSTGRES_PASSWORD=iamroot
+
 
   stats-db:
     image: postgres:14-alpine
+    container_name: ewm-stats-db
+    ports:
+      - "6542:5432"
+    environment:
+      - POSTGRES_DB=ewm-stats-db
+      - POSTGRES_USER=postgres
+      - POSTGRES_PASSWORD=iamroot
 
   ewm-service:
+    build: ewm-service
+    image: explore-with-me-ewm-service
+    container_name: ewm-service
     ports:
       - "8080:8080"
+    depends_on:
+      - ewm-db
+    environment:
+      - SPRING_DATASOURCE_URL=jdbc:postgresql://ewm-db:5432/ewm-service-db
+      - POSTGRES_USER=postgres
+      - POSTGRES_PASSWORD=iamroot
 
   ewm-db:
     image: postgres:14-alpine
+    container_name: ewm-service-db
+    ports:
+      - "6541:5432"
+    environment:
+      - POSTGRES_DB=ewm-service-db
+      - POSTGRES_USER=postgres
+      - POSTGRES_PASSWORD=iamroot
