--- a/ewm-service/pom.xml
+++ b/ewm-service/pom.xml
@@ -16,6 +16,7 @@
         <maven.compiler.source>11</maven.compiler.source>
         <maven.compiler.target>11</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <starterWeb.version>2.7.5</starterWeb.version>
     </properties>
 
     <dependencies>
@@ -27,7 +28,7 @@
     <dependency>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-web</artifactId>
-        <version>2.7.5</version>
+        <version>${starterWeb.version}</version>
     </dependency>
 
     <dependency>
